hphp/hack/test/typecheck/shape_access_coalesce_nullable.php.exp
File "shape_access_coalesce_nullable.php", line 5, characters 3-15:
You are accessing a field known to not exist (Typing[4321])
  File "shape_access_coalesce_nullable.php", line 3, characters 13-29:
  The field `b` is not defined in this shape
File "shape_access_coalesce_nullable.php", line 8, characters 3-15:
You are accessing a field known to not exist (Typing[4321])
  File "shape_access_coalesce_nullable.php", line 3, characters 13-29:
  The field `b` is not defined in this shape
